--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -363,7 +363,7 @@
     }
 
     .aksii-bottom {
-      .aksii-content-row {
+      .aksii-content-row, .products-hero__bottom-row {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
