--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,8 @@
 @use "./layout/toggles";
 @use "./categorii";
 @use "./home";
+@use "./products";
+@use "./category";
 
 * {
   box-sizing: border-box;
