--- a/scss/_category.scss
+++ b/scss/_category.scss
@@ -1,5 +1,6 @@
 .category-hero {
   margin-top: 124px;
+  margin-bottom: 50px;
 
   .category-hero__top {
     display: flex;
@@ -40,6 +41,7 @@
 
   .category-hero__content {
     display: flex;
+    gap: 30px;
 
     .c-h-c-left {
       display: flex;
@@ -109,14 +111,150 @@
       }
     }
 
-    .c-h-c-right{
+    .c-h-c-right {
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      .c-h-c-right__row{
+      .c-h-c-right__row {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+
+        .aksii-card {
+          width: 272px;
+          padding: 8px;
+          display: flex;
+          flex-direction: column;
+          background-color: #fff;
+          transition: 0.3s ease-in-out;
+
+          @media (max-width:920px) {
+            width: 250px;
+          }
+
+          @media (max-width:920px) {
+            width: 210px;
+          }
+
+          @media (max-width:500px) {
+            width: 100%;
+          }
+
+          .aksii-card-image {
+            width: 100%;
+            height: 172px;
+            position: relative;
+
+            img {
+              @media (max-width:920px) {
+                width: 100%;
+              }
+
+              @media (max-width:500px) {
+                width: 100%;
+                height: 160px;
+              }
+            }
+
+            p {
+              position: absolute;
+              bottom: 2px;
+              left: 3px;
+              width: 56px;
+              padding: 4px 8px;
+              border-radius: 4px;
+              background: #F63;
+              color: #fff;
+            }
+
+            span {
+              position: absolute;
+              right: 20px;
+              top: 10px;
+            }
+          }
+
+          .aksii-card-body {
+            display: flex;
+            flex-direction: column;
+
+            .aksii-card-id {
+              margin: 0;
+              color: #606060;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+            }
+
+            .aksii-card-prices {
+              margin-top: 10px;
+              margin-bottom: 10px;
+
+              p {
+                margin: 0;
+                ;
+                color: #414141;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 150%;
+              }
+            }
+
+            .aksii-card-description {
+              margin: 0;
+              color: #414141;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+              height: 100px;
+
+              @media(max-width:920px) {
+                height: 100px;
+              }
+
+              @media(max-width:270px) {
+                height: 100px;
+                margin-bottom: 50px;
+              }
+            }
+
+            .aksii-card-rating {
+              margin-top: 10px;
+              margin-bottom: 10px;
+              display: flex;
+              gap: 4px;
+
+              img {
+                cursor: pointer;
+              }
+            }
+
+            .aksii-card-btn {
+              cursor: pointer;
+              padding: 8px;
+              background-color: #fff;
+              border-radius: 4px;
+              border: 1px solid #70C05B;
+              color: #70C05B;
+              text-align: center;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+
+              &:hover {
+                background-color: #F63;
+                border: 1px solid #F63;
+                color: #fff;
+              }
+            }
+          }
+
+        }
       }
     }
   }
