--- a/scss/_categorii.scss
+++ b/scss/_categorii.scss
@@ -70,6 +70,7 @@
         overflow: hidden;
         transition: 1s;
         cursor: pointer;
+        transition: 1s ease-in-out;
 
 
         &:hover {
