--- a/css/main.css
+++ b/css/main.css
@@ -195,18 +195,18 @@
     display: none;
   }
 }
-.header .header-wrapper form {
+.header .header-wrapper #header-s-form {
   margin-right: 40px;
   position: relative;
   display: flex;
   align-items: center;
 }
 @media (max-width: 780px) {
-  .header .header-wrapper form {
+  .header .header-wrapper #header-s-form {
     margin-right: 10px;
   }
 }
-.header .header-wrapper form input {
+.header .header-wrapper #header-s-form input {
   outline: none;
   width: 360px;
   height: 40px;
@@ -222,21 +222,21 @@
   line-height: 150%;
 }
 @media (max-width: 1150px) {
-  .header .header-wrapper form input {
+  .header .header-wrapper #header-s-form input {
     width: 100%;
   }
 }
 @media (max-width: 860px) {
-  .header .header-wrapper form input {
+  .header .header-wrapper #header-s-form input {
     width: 215px;
   }
 }
 @media (max-width: 300px) {
-  .header .header-wrapper form input {
+  .header .header-wrapper #header-s-form input {
     width: 100%;
   }
 }
-.header .header-wrapper form img {
+.header .header-wrapper #header-s-form img {
   position: absolute;
   right: 10px;
   cursor: pointer;
@@ -2912,6 +2912,484 @@
   line-height: 150%;
 }
 .favorites-hero .favorites-hero__content .f-h-f-right .f-h-f-right__row .aksii-card .aksii-card-body .aksii-card-btn:hover {
+  background-color: #F63;
+  border: 1px solid #F63;
+  color: #fff;
+}
+
+.header-sign-in-modal {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.header-sign-in-modal #header-s-i-form {
+  width: 420px;
+  height: 481px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 6px;
+  position: relative;
+}
+.header-sign-in-modal #header-s-i-form h2 {
+  margin-top: 5px;
+  color: #414141;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1 p, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2 p, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 p {
+  margin: 0;
+  height: 10px;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1 label, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2 label, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 label {
+  color: #8F8F8F;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1 #header-sign-in-modal-name-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2 #header-sign-in-modal-name-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 #header-sign-in-modal-name-input {
+  padding-left: 10px;
+  width: 100%;
+  height: 40px;
+  outline: #70C05B;
+  border-radius: 4px;
+  border: 1px solid #70C05B;
+  background: #fff;
+  box-shadow: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+  color: #8F8F8F;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1 #header-sign-in-modal-surname-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2 #header-sign-in-modal-surname-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 #header-sign-in-modal-surname-input {
+  padding-left: 10px;
+  width: 100%;
+  height: 40px;
+  outline: #70C05B;
+  border-radius: 4px;
+  border: 1px solid #70C05B;
+  background: #fff;
+  box-shadow: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+  color: #8F8F8F;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group1 #header-sign-in-modal-tel-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group2 #header-sign-in-modal-tel-input, .header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .sign-in-modal-input-group3 #header-sign-in-modal-tel-input {
+  padding-left: 10px;
+  width: 100%;
+  height: 40px;
+  outline: #70C05B;
+  border-radius: 4px;
+  border: 1px solid #70C05B;
+  background: #fff;
+  box-shadow: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+  color: #8F8F8F;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-wrapper .header-sign-in-modal-submit-button {
+  margin-top: 30px;
+  padding: 10px;
+  border: none;
+  background-color: #f63;
+  color: #fff;
+  border-radius: 4px;
+}
+.header-sign-in-modal #header-s-i-form .header-sign-in-modal-closer-btn {
+  padding: 8px;
+  position: absolute;
+  top: 0;
+  right: -8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  background: #F3F2F1;
+}
+
+.after-sign-complete {
+  padding: 10px;
+  font-size: 50px;
+  text-align: center;
+  color: #fff;
+}
+
+.pro-hero {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+.pro-hero .pro-hero-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-top {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-top p {
+  color: #414141;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-top span {
+  color: #8F8F8F;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle {
+  margin-top: 23px;
+  margin-bottom: 23px;
+  display: flex;
+  flex-direction: column;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle h1 {
+  color: #414141;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div p:first-child {
+  color: #414141;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span1 {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span1 a {
+  margin-left: 4px;
+  color: #414141;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  text-decoration-line: underline;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span2 {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span2 p {
+  color: #606060;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span3 {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-middle div .pro-middle-span3 p {
+  color: #606060;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom {
+  display: flex;
+  gap: 40px;
+}
+@media (max-width: 1040px) {
+  .pro-hero .pro-hero-wrapper .pro-hero-bottom {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left {
+  display: flex;
+  gap: 10px;
+  position: relative;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .images-pro {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .images-pro img {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .pro-hero-bottom-left-mainimg {
+  width: 505px;
+  height: 495px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (max-width: 1040px) {
+  .pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .pro-hero-bottom-left-mainimg {
+    width: 400px;
+  }
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .pro-hero-bottom-left-mainimg img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 490px;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-left .pro-img-discount {
+  position: absolute;
+  right: 0px;
+  top: -30px;
+  padding: 5px;
+  color: #fff;
+  background-color: #f63;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-middle {
+  margin-top: 20px;
+  margin-bottom: 25px;
+  display: flex;
+  justify-content: center;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-middle a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 279px;
+  height: 60px;
+  padding: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background: #f63;
+  color: #fff;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-bottom {
+  display: flex;
+  flex-direction: column;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-bottom .g-h-c-l-table {
+  display: flex;
+  flex-direction: column;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-bottom .g-h-c-l-table .g-h-c-l-table-s1 {
+  width: 100%;
+  padding: 4px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f3f2f1;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-bottom .g-h-c-l-table .g-h-c-l-table-s2 {
+  width: 100%;
+  padding: 4px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.pro-hero .pro-hero-wrapper .pro-hero-bottom .pro-hero-bottom-right .p2-h-b-r-bottom .g-h-c-l-table .g-h-c-l-table-s3 {
+  width: 100%;
+  padding: 4px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f3f2f1;
+}
+
+.pro-relatives {
+  margin-top: 50px;
+}
+.pro-relatives .pro-relatives-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card {
+  width: 272px;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  transition: 0.3s ease-in-out;
+}
+@media (max-width: 920px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card {
+    width: 250px;
+  }
+}
+@media (max-width: 920px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card {
+    width: 210px;
+  }
+}
+@media (max-width: 500px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card {
+    width: 100%;
+  }
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image {
+  width: 100%;
+  height: 172px;
+  position: relative;
+}
+@media (max-width: 920px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image img {
+    width: 100%;
+    height: 160px;
+  }
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image p {
+  position: absolute;
+  bottom: 2px;
+  left: 3px;
+  width: 56px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: #F63;
+  color: #fff;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image span {
+  padding: 5px 5px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  cursor: pointer;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-image span img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body {
+  display: flex;
+  flex-direction: column;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-id {
+  margin: 0;
+  color: #606060;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-prices {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-prices p {
+  margin: 0;
+  color: #414141;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-description {
+  margin: 0;
+  color: #414141;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+@media (max-width: 920px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-description {
+    height: 100px;
+  }
+}
+@media (max-width: 270px) {
+  .pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-description {
+    height: 100px;
+    margin-bottom: 50px;
+  }
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-rating {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  gap: 4px;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-rating img {
+  cursor: pointer;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-btn {
+  cursor: pointer;
+  padding: 8px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #70C05B;
+  color: #70C05B;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.pro-relatives .pro-relatives-wrapper .aksii-card .aksii-card-body .aksii-card-btn:hover {
   background-color: #F63;
   border: 1px solid #F63;
   color: #fff;
